--- a/style.css
+++ b/style.css
@@ -1,6 +1,32 @@
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    margin-bottom: 1%;
+}
+li {
+    float: left;
+}
+li a {
+    display: block;
+    color: black;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+}
+.navbar{
+    display: inline-block;
+    width: 100%;
+    background-color: rgb(216, 216, 216);
+}
+.nav-links{
+    float: right;
+}
 body{
     font-family: 'Poppins', sans-serif;
     margin: 0;
+    background-color: rgb(209, 207, 207);
 }
 h1{
     font-size: 40px;
@@ -17,12 +43,9 @@ h1{
 .half-width img{
     width: 100%;
 }
-.top-banner{
-    background-image: url("images/top-banner.png");
-    background-repeat: no-repeat;
-}
+
 section{
-    height: 500px;
+    height: 400px;
     padding-bottom: 150px;
 }
 .hire-button{
@@ -33,32 +56,64 @@ section{
     color: white;
     font-weight: 700;
 }
-
-.second-banner {
-    background-image: url("images/dream-bg.png");
-    background-repeat: no-repeat;
-    background-position:right ;
+.working-projects{
+    background-color: rgb(231, 228, 228);
 }
-.single-experience{
-    box-shadow: 10px 10px 40px gray;
-    border-radius: 5px;
-    height: 80%;
-}
-.experience-area{
-    background-image: url("images/exp-bg.png");
-    background-repeat: no-repeat;
-    background-position:left ;
-}
-#baby-web-dev-bordercolor{
-    border-left:7px solid ;
-    border-image: linear-gradient(180deg,blue,cyan);
-    border-image-slice: 1;
-}
-#fullstack-web-dev-bordercolor{
-    border-left:7px solid ;
-    border-image: linear-gradient(lightSalmon,tomato);
-    border-image-slice: 1;
-}
-.copyright{
+#working-project-heading{
     text-align: center;
+    padding-top: 30px;
+}
+.projects{
+    box-shadow: 10px 10px 20px gray;
+    border-radius: 20px;
+    width: 25%;
+    float: left;
+    margin-left: 5%;
+    padding-left: 1%;
+    padding-right: 1%;
+    padding-top: 1%;
+}
+.projects img{
+    width: 100%;
+}
+.team-member{
+    box-shadow: 10px 10px 20px gray;
+    width: 25%;
+    float: left;
+    margin-left: 5%;
+    padding-left: 1%;
+    padding-right: 1%;
+    padding-top: 1%;
+}
+.team-member img{
+    width: 70%;
+    border-radius: 50%;
+}
+
+.chat{
+    background-image: url("images/Group_33094_1.png");
+    background-repeat: no-repeat;
+    width: 700px;
+    height: 200px;
+    background-size: contain;
+    margin-left: 250px;
+}
+.chat-in-line{
+    float: left;
+    margin-left: 150px;
+    margin-top: 70px;
+}
+#work-inquiry{
+    color: white;
+    font-weight: 800;
+    font-size: 30px;
+}
+.finishing-line{
+    text-align: center;
+}
+.finishing-line img{
+    width: 2%;
+}
+footer{
+    padding-bottom: 30px;
 }
